--- a/cd/index.html
+++ b/cd/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <title >chrome easter egg: t-rex runner</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://zepip.github.io/cd/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
-    <script src="index.js"></script>
+    <script src="https://zepip.github.io/cd/index.js"></script>
 </head>
 
 <body id="t" class="offline">
