--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Your browser does not support the video loser .
 
             <div class="wrap">
                 <div>
-                    <a href="https://zepip.github.io/cd" target="_blank">
+                    <a href="https://zepip.vercel.app/cd" target="_blank">
                         <p class="button">
                             <i class="fa-sharp fa-solid fa-t-rex"></i>chrome dino
                         </p>
